done with upto metadatas

--- a/nbs/07_utils.ipynb
+++ b/nbs/07_utils.ipynb
@@ -202,11 +202,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def isNaN(num):\n",
-    "    return num != num\n",
-    "\n",
-    "def nan2emptystr(x):\n",
-    "    if isNaN(num): return ''\n",
+    "def none2emptystr(x):\n",
+    "    if x is None: return ''\n",
     "    return str(x)"
    ]
   },
