almost done, some problem with streaming

--- a/nbs/07_utils.ipynb
+++ b/nbs/07_utils.ipynb
@@ -110,8 +110,9 @@
     "\n",
     "    return str(any_callable)\n",
     "\n",
-    "def print_msg(msg,dash_num=5):\n",
-    "    print('-'*dash_num+' '+msg+' '+ '-'*dash_num)\n",
+    "def print_msg(msg,dash_num=5,verbose=True):\n",
+    "    if verbose:\n",
+    "        print('-'*dash_num+' '+msg+' '+ '-'*dash_num)\n",
     "\n",
     "def seed_notorch(seed=42):\n",
     "    random.seed(seed)\n",
@@ -153,30 +154,31 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def check_input_validation(df:pd.DataFrame):\n",
-    "    print_msg('Input Validation Precheck')\n",
+    "def check_input_validation(df:pd.DataFrame,verbose=True):\n",
+    "    verboseprint = print if verbose else lambda *a, **k: None\n",
+    "    print_msg('Input Validation Precheck',verbose)\n",
     "    # check whether index is sorted\n",
     "    correct_idxs = np.arange(df.shape[0])\n",
     "    curr_idxs = df.index.values\n",
     "    if not np.array_equal(correct_idxs,curr_idxs):\n",
-    "        print(\"DataFrame Index is not RangeIndex, and will be converted\")\n",
+    "        verboseprint(\"DataFrame Index is not RangeIndex, and will be converted\")\n",
     "        df.index = correct_idxs\n",
     "\n",
     "    # Do a NA check:\n",
     "    na_check = df.isna().sum(axis=0)\n",
     "    na_check = na_check[na_check!=0]\n",
     "    if na_check.shape[0]!=0:\n",
-    "        print(\"Data contains missing values!\")\n",
-    "        print('-----> List of columns and the number of missing values for each')\n",
-    "        print(na_check)\n",
+    "        verboseprint(\"Data contains missing values!\")\n",
+    "        verboseprint('-----> List of columns and the number of missing values for each')\n",
+    "        verboseprint(na_check)\n",
     "\n",
     "    # Do a row duplication check\n",
     "    _df = df.copy().astype(str)\n",
     "    dup_check = _df.value_counts(dropna=False)\n",
     "    dup_check=dup_check[dup_check>1]\n",
     "    if dup_check.shape[0]!=0:\n",
-    "        print(\"Data contains duplicated values!\")\n",
-    "        print(f'-----> Number of duplications: {(dup_check.values-1).sum()} rows')\n",
+    "        verboseprint(\"Data contains duplicated values!\")\n",
+    "        verboseprint(f'-----> Number of duplications: {(dup_check.values-1).sum()} rows')\n",
     "        "
    ]
   },
@@ -188,10 +190,11 @@
    "source": [
     "#| export\n",
     "def check_text_leaking(trn_txt:list,\n",
-    "                       test_txt:list):\n",
+    "                       test_txt:list,verbose=True):\n",
+    "    verboseprint = print if verbose else lambda *a, **k: None\n",
     "    test_txt_leaked = {i.strip().lower() for i in trn_txt} & {j.strip().lower() for j in test_txt}\n",
     "    len_leaked = len(test_txt_leaked)\n",
-    "    print(f'- Number of rows leaked: {len_leaked}, which is {100*len_leaked/len(trn_txt):.2f}% of training set')\n",
+    "    verboseprint(f'- Number of rows leaked: {len_leaked}, which is {100*len_leaked/len(trn_txt):.2f}% of training set')\n",
     "    return test_txt_leaked"
    ]
   },
@@ -243,25 +246,6 @@
     "    else:\n",
     "        results[output_feature] = func(inp[feature]) if is_batched else func([inp[feature]])\n",
     "    return results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| hide\n",
-    "# def lambda_filter_stochastic(inp, # HuggingFace Dataset\n",
-    "#                              feature, # Feature name.\n",
-    "#                              func, # The function to apply\n",
-    "#                              prob, # Probability of executing the function\n",
-    "#                              is_batched, # Whether batching is applied\n",
-    "#                             ):\n",
-    "    \n",
-    "#     if is_batched:\n",
-    "#         return [func(v) if random.random()<prob else False for v in inp[feature]]\n",
-    "#     return func(inp[feature]) if random.random()<prob else False"
    ]
   },
   {
