finish text_main

--- a/nbs/07_utils.ipynb
+++ b/nbs/07_utils.ipynb
@@ -46,7 +46,8 @@
     "import pandas as pd\n",
     "from typing import Callable, Any\n",
     "from collections.abc import Iterable\n",
-    "import random"
+    "import random\n",
+    "import warnings"
    ]
   },
   {
@@ -285,6 +286,19 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "def get_dset_col_names(dset):\n",
+    "    if dset.column_names is not None: return dset.column_names\n",
+    "    warnings.warn(\"Iterable Dataset might contain multiple mapping functions; getting column names can be time and memory consuming\") \n",
+    "    return list(next(iter(dset)).keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "def sigmoid(x):\n",
     "    \"\"\"\n",
     "    A numerically stable version of the logistic sigmoid function.\n",
@@ -305,18 +319,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/quan/anaconda3/envs/fastai_v2/lib/python3.10/site-packages/nbdev/export.py:54: UserWarning: Notebook '/home/quan/kwon/that-nlp-library/nbs/00_text_main.ipynb' uses `#|export` without `#|default_exp` cell.\n",
-      "Note nbdev2 no longer supports nbdev1 syntax. Run `nbdev_migrate` to upgrade.\n",
-      "See https://nbdev.fast.ai/getting_started.html for more information.\n",
-      "  warn(f\"Notebook '{nbname}' uses `#|export` without `#|default_exp` cell.\\n\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
