--- a/nbs/deprecated/00_text_main[DEPRECATED].ipynb
+++ b/nbs/deprecated/00_text_main[DEPRECATED].ipynb
@@ -6,16 +6,10 @@
    "source": [
     "# Text Main\n",
     "\n",
-    "> This module contains the main Python class for data control: `TextDataMain`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| default_exp text_main"
+    "> This module contains the main Python class for data control: `TextDataMain`\n",
+    "\n",
+    "- skip_showdoc: true\n",
+    "- skip_exec: true"
    ]
   },
   {
@@ -34,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "\n",
     "from __future__ import annotations\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -72,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "\n",
     "def tokenizer_explain(inp, # Input sentence\n",
     "                      tokenizer, # Tokenizer (preferably from HuggingFace)\n",
     "                      split_word=False # Is input `inp` split into list or not\n",
@@ -334,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "\n",
     "def two_steps_tokenization_explain(inp, # Input sentence\n",
     "                                   tokenizer, # Tokenizer (preferably from HuggingFace)\n",
     "                                   split_word=False, # Is input `inp` split into list or not\n",
@@ -543,7 +537,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "\n",
     "def tokenize_function(examples:dict,\n",
     "                      tok,\n",
     "                      max_length=None,\n",
@@ -565,7 +559,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "\n",
     "def datasetdictize_given_idxs(kv_pairs:dict, # Dictionary; keys can be content, label, metadata. Values are list each.\n",
     "                              trn_idx=None, # Training indices\n",
     "                              val_idx=None, # Validation indices\n",
@@ -914,7 +908,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "\n",
     "class TextDataMain():\n",
     "    def __init__(self,\n",
     "                 df: pd.DataFrame, # The main dataframe\n",
@@ -2730,16 +2724,6 @@
    ],
    "source": [
     "tdm_light.metadata_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| hide\n",
-    "import nbdev; nbdev.nbdev_export()"
    ]
   }
  ],
