--- a/nbs/deprecated/01_text_augmentation[DEPRECATED].ipynb
+++ b/nbs/deprecated/01_text_augmentation[DEPRECATED].ipynb
@@ -6,7 +6,10 @@
    "source": [
     "# Text Augmentation\n",
     "\n",
-    "> This contains some text augmentation functionality. "
+    "> This contains some text augmentation functionality. \n",
+    "\n",
+    "- skip_showdoc: true\n",
+    "- skip_exec: true"
    ]
   },
   {
