--- a/nbs/00_text_main.ipynb
+++ b/nbs/00_text_main.ipynb
@@ -1136,7 +1136,7 @@
     "        \n",
     "        trn_txt = self.main_ddict['train'][self.main_text]\n",
     "        val_txt = self.main_ddict['validation'][self.main_text]        \n",
-    "        val_txt_leaked = check_text_leaking(trn_txt,val_txt)\n",
+    "        val_txt_leaked = check_text_leaking(trn_txt,val_txt,verbose=self.verbose)\n",
     "        \n",
     "        if len(val_txt_leaked)==0: return\n",
     "        \n",
@@ -1426,7 +1426,10 @@
     "            \n",
     "    def _do_train_shuffling(self):\n",
     "        print_msg('Shuffling train set',20,verbose=self.verbose)\n",
-    "        self.main_ddict['train'] = self.main_ddict['train'].shuffle(seed=self.seed, buffer_size=self.buffer_size)\n",
+    "        if self.is_streamed:\n",
+    "            self.main_ddict['train'] = self.main_ddict['train'].shuffle(seed=self.seed, buffer_size=self.buffer_size)\n",
+    "        else:\n",
+    "            self.main_ddict['train'] = self.main_ddict['train'].shuffle(seed=self.seed)\n",
     "        self.verboseprint('Done')\n",
     "        \n",
     "    def do_all_preprocessing(self,\n",
