--- a/nbs/07_utils.ipynb
+++ b/nbs/07_utils.ipynb
@@ -256,16 +256,24 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def augmentation_helper(inp,text_name,func):\n",
-    "    # inp[text_name] will be list\n",
-    "    inp[text_name]=[func(v) for v in val2iterable(inp[text_name])]\n",
-    "    return inp\n",
-    "\n",
     "def augmentation_stream_generator(dset,text_name,func):\n",
     "    for inp in dset:\n",
     "        # inp[text_name] will be a single item\n",
     "        inp[text_name]=func(inp[text_name])\n",
     "        yield inp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "# def augmentation_helper(inp,text_name,func):\n",
+    "#     # inp[text_name] will be list\n",
+    "#     inp[text_name]=[func(v) for v in val2iterable(inp[text_name])]\n",
+    "#     return inp"
    ]
   },
   {
@@ -290,6 +298,46 @@
     "    if dset.column_names is not None: return dset.column_names\n",
     "    warnings.warn(\"Iterable Dataset might contain multiple mapping functions; getting column names can be time and memory consuming\") \n",
     "    return list(next(iter(dset)).keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def hf_map_dset(dset,func,\n",
+    "                is_streamed=False,\n",
+    "                is_batched=True,\n",
+    "                batch_size=100,\n",
+    "                num_proc=1):\n",
+    "    if is_streamed:\n",
+    "        return dset.map(func,\n",
+    "                        batched=is_batched,\n",
+    "                        batch_size=batch_size\n",
+    "                       )\n",
+    "    return dset.map(func,\n",
+    "                    batched=is_batched,\n",
+    "                    batch_size=batch_size,\n",
+    "                    num_proc=num_proc\n",
+    "                   )\n",
+    "\n",
+    "def hf_filter_dset(dset,func,\n",
+    "                   is_streamed=False,\n",
+    "                   is_batched=True,\n",
+    "                   batch_size=100,\n",
+    "                   num_proc=1):\n",
+    "    if is_streamed:\n",
+    "        return dset.filter(func,\n",
+    "                           batched=is_batched,\n",
+    "                           batch_size=batch_size\n",
+    "                          )\n",
+    "    return dset.filter(func,\n",
+    "                       batched=is_batched,\n",
+    "                       batch_size=batch_size,\n",
+    "                       num_proc=num_proc\n",
+    "                      )"
    ]
   },
   {
