--- a/nbs/07_utils.ipynb
+++ b/nbs/07_utils.ipynb
@@ -46,6 +46,7 @@
     "import pandas as pd\n",
     "from typing import Callable, Any\n",
     "from collections.abc import Iterable\n",
+    "from datasets import IterableDataset\n",
     "import random\n",
     "import warnings"
    ]
@@ -237,11 +238,14 @@
     "                     feature, # Feature name.\n",
     "                     func, # The function to apply\n",
     "                     is_batched, # Whether batching is applied\n",
-    "                     output_feature=None, # New feature output, if different from 'feature'\n",
-    "                     is_func_batched=False # Whether the func above only works with batch\n",
+    "                     output_feature='same', # New feature output, if different from 'feature'. If none, use function's output feature(s)\n",
+    "                     is_func_batched=False # Whether the func above only works with batch (mostly sklearn's)\n",
     "                    ):\n",
+    "    \n",
+    "    if output_feature is None: \n",
+    "        return func(inp[feature]) if is_batched else func([inp[feature]])\n",
+    "    if output_feature.strip().lower()=='same': output_feature = feature\n",
     "    results={}\n",
-    "    if output_feature is None: output_feature = feature\n",
     "    if not is_func_batched:\n",
     "        results[output_feature] = lambda_batch(inp,feature,func,is_batched)\n",
     "    else:\n",
@@ -260,6 +264,23 @@
     "    for inp in dset:\n",
     "        # inp[text_name] will be a single item\n",
     "        inp[text_name]=func(inp[text_name])\n",
+    "        yield inp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def aug_and_tok_stream_generator(dset,text_name,tok_func,func=None):\n",
+    "    for inp in dset:\n",
+    "        # inp[text_name] will be a single item\n",
+    "        if func is not None: inp[text_name]=func(inp[text_name])\n",
+    "        result_dict = tok_func(inp[text_name])\n",
+    "        for k,v in result_dict.items():\n",
+    "            inp[k]=v\n",
     "        yield inp"
    ]
   },
@@ -308,10 +329,10 @@
    "source": [
     "#| export\n",
     "def hf_map_dset(dset,func,\n",
-    "                is_streamed=False,\n",
     "                is_batched=True,\n",
     "                batch_size=100,\n",
     "                num_proc=1):\n",
+    "    is_streamed = isinstance(dset,IterableDataset)\n",
     "    if is_streamed:\n",
     "        return dset.map(func,\n",
     "                        batched=is_batched,\n",
@@ -324,10 +345,10 @@
     "                   )\n",
     "\n",
     "def hf_filter_dset(dset,func,\n",
-    "                   is_streamed=False,\n",
     "                   is_batched=True,\n",
     "                   batch_size=100,\n",
     "                   num_proc=1):\n",
+    "    is_streamed = isinstance(dset,IterableDataset)\n",
     "    if is_streamed:\n",
     "        return dset.filter(func,\n",
     "                           batched=is_batched,\n",
