continue on the classification tutorial, todo fix bug topk

--- a/nbs/00_text_main.ipynb
+++ b/nbs/00_text_main.ipynb
@@ -713,7 +713,7 @@
     "        # pad to model's default max sequence length\n",
     "        return tok(text, padding=\"max_length\", truncation=True,is_split_into_words=is_split_into_words,return_tensors=return_tensors)\n",
     "    if isinstance(max_length,int) and max_length>0:\n",
-    "        # pad to max length of the current batch, and start truncating at max_length\n",
+    "        # pad to the largest length of the current batch, and start truncating at max_length\n",
     "        return tok(text, padding=True, max_length=max_length,truncation=True,is_split_into_words=is_split_into_words,return_tensors=return_tensors)\n",
     "    \n",
     "    # no padding (still truncate at model's default max sequence length)\n",
