bug fixed successfully, todo do the rest of the tutorial

--- a/nbs/00_text_main.ipynb
+++ b/nbs/00_text_main.ipynb
@@ -1118,7 +1118,11 @@
     "                    parent='pickle_files' # Parent folder\n",
     "                   ):\n",
     "        return load_pickle(fname,parent=parent)\n",
-    "    \n",
+    "\n",
+    "    def set_verbose(self,verbose):\n",
+    "        self.verbose = verbose\n",
+    "        self.verboseprint = print if verbose else lambda *a, **k: None\n",
+    "        \n",
     "    def _determine_multihead_multilabel(self):\n",
     "        self.is_multilabel=False\n",
     "        self.is_multihead=False\n",
@@ -8612,6 +8616,10 @@
     "                   ):\n",
     "        return load_pickle(fname,parent=parent)\n",
     "    \n",
+    "    def set_verbose(self,verbose):\n",
+    "        self.verbose = verbose\n",
+    "        self.verboseprint = print if verbose else lambda *a, **k: None\n",
+    "        \n",
     "    def _determine_multihead_multilabel(self):\n",
     "        self.is_multilabel=False\n",
     "        self.is_multihead=False\n",
