finish model main tutorial, evaluation

--- a/nbs/04_models.roberta.classifiers.ipynb
+++ b/nbs/04_models.roberta.classifiers.ipynb
@@ -71,8 +71,7 @@
     "class ConcatHeadExtended(torch.nn.Module):\n",
     "    \"\"\"\n",
     "    Concatenated head for Roberta Classification Model. \n",
-    "\n",
-    "    This head takes the last 4 hidden states (of the last 4 layers), and concatenate them before passing through the classifier head\n",
+    "    This head takes the last n hidden states of [CLS], and concatenate them before passing through the classifier head\n",
     "    \"\"\"\n",
     "    def __init__(self,\n",
     "                 config, # HuggingFace model configuration\n",
@@ -119,8 +118,7 @@
        ">                          layer2concat=4, num_labels=None, **kwargs)\n",
        "\n",
        "Concatenated head for Roberta Classification Model. \n",
-       "\n",
-       "This head takes the last 4 hidden states (of the last 4 layers), and concatenate them before passing through the classifier head\n",
+       "This head takes the last n hidden states of [CLS], and concatenate them before passing through the classifier head\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
@@ -142,8 +140,7 @@
        ">                          layer2concat=4, num_labels=None, **kwargs)\n",
        "\n",
        "Concatenated head for Roberta Classification Model. \n",
-       "\n",
-       "This head takes the last 4 hidden states (of the last 4 layers), and concatenate them before passing through the classifier head\n",
+       "This head takes the last n hidden states of [CLS], and concatenate them before passing through the classifier head\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
@@ -174,8 +171,7 @@
     "class ConcatHeadSimple(torch.nn.Module):\n",
     "    \"\"\"\n",
     "    Concatenated head for Roberta Classification Model, the simpler version (no hidden linear layer)\n",
-    "\n",
-    "    This head takes the last 4 hidden states (of the last 4 layers), and concatenate them before passing through the classifier head\n",
+    "    This head takes the last n hidden states of [CLS], and concatenate them before passing through the classifier head\n",
     "    \"\"\"\n",
     "    def __init__(self,\n",
     "                 config, # HuggingFace model configuration\n",
@@ -214,8 +210,7 @@
        ">                        num_labels=None, **kwargs)\n",
        "\n",
        "Concatenated head for Roberta Classification Model, the simpler version (no hidden linear layer)\n",
-       "\n",
-       "This head takes the last 4 hidden states (of the last 4 layers), and concatenate them before passing through the classifier head\n",
+       "This head takes the last n hidden states of [CLS], and concatenate them before passing through the classifier head\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
@@ -236,8 +231,7 @@
        ">                        num_labels=None, **kwargs)\n",
        "\n",
        "Concatenated head for Roberta Classification Model, the simpler version (no hidden linear layer)\n",
-       "\n",
-       "This head takes the last 4 hidden states (of the last 4 layers), and concatenate them before passing through the classifier head\n",
+       "This head takes the last n hidden states of [CLS], and concatenate them before passing through the classifier head\n",
        "\n",
        "|    | **Type** | **Default** | **Details** |\n",
        "| -- | -------- | ----------- | ----------- |\n",
