finishing use-cases

--- a/nbs/03_model_classification_tutorial.ipynb
+++ b/nbs/03_model_classification_tutorial.ipynb
@@ -1124,13 +1124,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To convert the label index to string, we can use the ```label_lists``` attribute of tdm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "You can try to get your metric to see if it matches your last traing epoch's above"
    ]
   },
@@ -3379,7 +3372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define a custom Roberta model"
+    "## Define and train a custom Roberta model"
    ]
   },
   {
@@ -3781,13 +3774,6 @@
    "source": [
     "df_val = df_val.to_pandas()\n",
     "df_val.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To convert the label index to string, we can use the ```label_lists``` attribute of tdm"
    ]
   },
   {
