finish all tutorials, next up: gpt2 and llm training

--- a/nbs/03_model_main.ipynb
+++ b/nbs/03_model_main.ipynb
@@ -831,7 +831,7 @@
     "    is_batched=batch_size>1\n",
     "    if is_multilabel:\n",
     "        get_label_str_multilabel = lambda x: [label_lists[0][int(j)] for j in np.where(x==True)[0]]\n",
-    "        _func = partial(lambda_map_batch,feature=f'pred_{label_names[i]}',\n",
+    "        _func = partial(lambda_map_batch,feature=f'pred_{label_names[0]}',\n",
     "                        func=get_label_str_multilabel,\n",
     "                        is_batched=is_batched\n",
     "                       )\n",
@@ -1184,7 +1184,7 @@
        "\n",
        ">      ModelController.fit (epochs, learning_rate, ddict=None,\n",
        ">                           metric_funcs=[<function accuracy_score at\n",
-       ">                           0x7f737d693d00>], batch_size=16, weight_decay=0.01,\n",
+       ">                           0x7f7db196fd00>], batch_size=16, weight_decay=0.01,\n",
        ">                           lr_scheduler_type='cosine', warmup_ratio=0.1,\n",
        ">                           o_dir='./tmp_weights', save_checkpoint=False,\n",
        ">                           hf_report_to='none', compute_metrics=None,\n",
@@ -1222,7 +1222,7 @@
        "\n",
        ">      ModelController.fit (epochs, learning_rate, ddict=None,\n",
        ">                           metric_funcs=[<function accuracy_score at\n",
-       ">                           0x7f737d693d00>], batch_size=16, weight_decay=0.01,\n",
+       ">                           0x7f7db196fd00>], batch_size=16, weight_decay=0.01,\n",
        ">                           lr_scheduler_type='cosine', warmup_ratio=0.1,\n",
        ">                           o_dir='./tmp_weights', save_checkpoint=False,\n",
        ">                           hf_report_to='none', compute_metrics=None,\n",
