--- a/nbs/05_models.roberta.deep_hierarchical_classifiers.ipynb
+++ b/nbs/05_models.roberta.deep_hierarchical_classifiers.ipynb
@@ -463,11 +463,21 @@
     "        \n",
     "    \n",
     "    def forward(self, input_ids=None, attention_mask=None, token_type_ids=None,\n",
-    "                labels=None, **kwargs):\n",
+    "                labels=None, \n",
+    "                output_attentions= None,\n",
+    "                output_hidden_states= None,\n",
+    "                return_dict= None,\n",
+    "                **kwargs):\n",
     "        # Use model body to get encoder representations\n",
     "        # the only ones we need for now are input_ids and attention_mask\n",
-    "        outputs = self.body_model(input_ids, attention_mask=attention_mask,\n",
-    "                               token_type_ids=token_type_ids, **kwargs)\n",
+    "        output_hidden_states = output_hidden_states if output_hidden_states is not None else self.config.output_hidden_states\n",
+    "        outputs = self.body_model(input_ids, \n",
+    "                                  attention_mask=attention_mask,\n",
+    "                                  token_type_ids=token_type_ids, \n",
+    "                                  output_attentions=output_attentions,\n",
+    "                                  output_hidden_states=output_hidden_states,\n",
+    "                                  return_dict=return_dict,\n",
+    "                                  **kwargs)\n",
     "        \n",
     "        hidden_states = outputs['hidden_states'] # tuples with len 13 (number of layer/block)\n",
     "        # each with shape: (bs,seq_len,hidden_size_len), e.g. for phobert: (bs,256, 768)\n",
@@ -622,11 +632,21 @@
     "\n",
     "    \n",
     "    def forward(self, input_ids=None, attention_mask=None, token_type_ids=None,\n",
-    "                labels=None, **kwargs):\n",
+    "                labels=None, \n",
+    "                output_attentions= None,\n",
+    "                output_hidden_states= None,\n",
+    "                return_dict= None,\n",
+    "                **kwargs):\n",
     "        # Use model body to get encoder representations\n",
     "        # the only ones we need for now are input_ids and attention_mask\n",
-    "        outputs = self.body_model(input_ids, attention_mask=attention_mask,\n",
-    "                               token_type_ids=token_type_ids, **kwargs)\n",
+    "        output_hidden_states = output_hidden_states if output_hidden_states is not None else self.config.output_hidden_states\n",
+    "        outputs = self.body_model(input_ids, \n",
+    "                                  attention_mask=attention_mask,\n",
+    "                                  token_type_ids=token_type_ids, \n",
+    "                                  output_attentions=output_attentions,\n",
+    "                                  output_hidden_states=output_hidden_states,\n",
+    "                                  return_dict=return_dict,\n",
+    "                                  **kwargs)\n",
     "        \n",
     "        hidden_states = outputs['hidden_states'] # tuples with len 13 (number of layer/block)\n",
     "        # each with shape: (bs,seq_len,hidden_size_len), e.g. for phobert: (bs,256, 768)\n",
@@ -673,7 +693,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/deep_hierarchical_classifiers.py#L175){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/deep_hierarchical_classifiers.py#L185){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### RobertaHSCDHCSequenceClassification\n",
        "\n",
@@ -703,7 +723,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/deep_hierarchical_classifiers.py#L175){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/anhquan0412/that-nlp-library/blob/main/that_nlp_library/models/roberta/deep_hierarchical_classifiers.py#L185){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### RobertaHSCDHCSequenceClassification\n",
        "\n",
