--- a/nbs/06_models.roberta.conditional_prob_classifiers.ipynb
+++ b/nbs/06_models.roberta.conditional_prob_classifiers.ipynb
@@ -251,23 +251,34 @@
     "        \n",
     "        self.body_model = RobertaModel(config, add_pooling_layer=False)\n",
     "        self.standard_mask = standard_mask.to(self.training_device)\n",
-    "        self.classification_head = head_class(config=config,\n",
+    "        self.classification_head = head_class(config=config,layer2concat=layer2concat,\n",
     "                                              **head_class_kwargs) \n",
     "\n",
     "\n",
     "    def forward(self, input_ids=None, attention_mask=None, token_type_ids=None,\n",
-    "                labels=None, **kwargs):\n",
+    "                labels=None, \n",
+    "                output_attentions= None,\n",
+    "                output_hidden_states= None,\n",
+    "                return_dict= None,\n",
+    "                **kwargs):\n",
     "        # Use model body to get encoder representations\n",
     "        # the only ones we need for now are input_ids and attention_mask\n",
-    "        outputs = self.body_model(input_ids, attention_mask=attention_mask,\n",
-    "                               token_type_ids=token_type_ids, **kwargs)\n",
+    "        output_hidden_states = output_hidden_states if output_hidden_states is not None else self.config.output_hidden_states\n",
+    "        \n",
+    "        outputs = self.body_model(input_ids, \n",
+    "                                  attention_mask=attention_mask,\n",
+    "                                  token_type_ids=token_type_ids, \n",
+    "                                  output_attentions=output_attentions,\n",
+    "                                  output_hidden_states=output_hidden_states,\n",
+    "                                  return_dict=return_dict,\n",
+    "                                  **kwargs)\n",
     "        \n",
     "        hidden_states = outputs['hidden_states'] # tuples with len 13 (number of layer/block)\n",
     "        # each with shape: (bs,seq_len,hidden_size_len), e.g. for phobert: (bs,256, 768)\n",
     "        # Note: hidden_size_len = embedding_size\n",
     "        \n",
     "        hidden_concat = torch.cat([hidden_states[i][:,0] for i in range(-1,-self.layer2concat-1,-1)],\n",
-    "                                  -1) # (bs,768*4)\n",
+    "                                  -1)\n",
     "        \n",
     "        # classification head\n",
     "        logits = self.classification_head(hidden_concat)\n",
