--- a/nbs/20_model_main_roberta_singlehead.ipynb
+++ b/nbs/20_model_main_roberta_singlehead.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Model Controller Tutorial: Roberta model (Custom Single Head)\n",
     "\n",
-    "> This notebook contains some example of how to use the EnviBert-based models in this NLP library\n",
+    "> This notebook contains some example of how to use the Roberta-based models in this NLP library\n",
     "\n",
     "- skip_showdoc: true\n",
     "- skip_exec: true"
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will walk through other cases of classification: multi-head and multi-label. Since we will showcase the capabiilty of this label in these cases, there won't be as detailed as [this tutorial](https://anhquan0412.github.io/that-nlp-library/model_main_envibert.html)"
+    "In this series, we walk through some of the capability of this library: single-head classification, multi-head classification, multi-label classification, and regression. If you want a more detailed tutorial, check [this](https://anhquan0412.github.io/that-nlp-library/model_classification_tutorial.html) out"
    ]
   },
   {
